--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             background-color: var(--light-beige);
             color: var(--golden-text);
             padding: 0.1rem 0;
-            position: fixed;
+            position: static;
             width: 100%;
             top: 0;
             z-index: 1000;
@@ -65,8 +65,8 @@
         }
 
         .logo img {
-            height: 60px;
-            margin-right: 60px;
+            height: 50px;
+            margin-right: 50px;
         }
 
         nav a {
@@ -91,7 +91,7 @@
 
         .hero-content {
             display: flex;
-            align-items: center;
+            align-items: normal;
             max-width: 1200px;
             padding: 3rem;
         }
@@ -103,7 +103,7 @@
         .hero-image img {
             max-width: 300px;
             border-radius: 1%;
-            border: 4px solid var(--light-beige);
+            border: 4px solid var(--dark-text);
         }
 
         .hero-description h1 {
@@ -122,7 +122,7 @@
             display: inline-block;
             background-color: var(--whatsapp-green);
             color: white;
-            padding: 12px 30px;
+            padding: 20px 90px;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
@@ -130,7 +130,7 @@
         }
 
         .cta-button i {
-            margin-right: 10px;
+            margin-right: 30px;
         }
 
         .cta-button:hover {
@@ -250,7 +250,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-image">
-                <img src="logo.png" alt="Shirley Melo">
+                <img src="image.png" alt="Shirley Melo">
             </div>
             <div class="hero-description">
                 <h1>Shirley Melo - OAB/GO 46.479 </h1>
